# escalator-enquete

./: README.md
docs/: db.md  spresense.md
server/: README.md  (+1 more)
servers/app_server/: .gitignore  README.md  pyproject.toml
servers/app_server/flask_app/: __init__.py  app.py  models.py
servers/app_server/flask_app/controllers/: index_bp.py  mqtt_bp.py  mqtt_subscribe_bp.py  question_bp.py  sensing_count_bp.py  user_bp.py
servers/app_server/flask_app/migrations/versions/: 1701d0a1046e_add_sensing_counts_table.py  419315083c2a_add_questions_table.py  881d2c4c844c_add_unique_constraint_to_questions.py  e9f439272288_fix_questions_table.py  ebbd4d77c31d_add_not_null.py  ff4ba99f56fe_initial_migration.py
servers/app_server/flask_app/vite/: package.json  pnpm-lock.yaml
servers/app_server/flask_app/vite/src/: main.tsx
servers/app_server/flask_app/vite/src/pages/CreateQuestion/: index.tsx
servers/app_server/flask_app/vite/src/pages/CreateUser/: index.tsx
servers/app_server/flask_app/vite/src/pages/CreateUsers/: index.tsx
servers/app_server/flask_app/vite/src/pages/DeleteUsers/: index.tsx
servers/app_server/flask_app/vite/src/pages/Index/: index.tsx
servers/app_server/flask_app/vite/src/pages/ReadQuestion/: index.tsx
servers/app_server/flask_app/vite/src/pages/ReadQuestions/: index.tsx
servers/app_server/flask_app/vite/src/pages/ReadUser/: index.tsx
servers/app_server/flask_app/vite/src/pages/ReadUsers/: index.tsx
servers/app_server/flask_app/vite/src/pages/SensingCounts/: index.tsx
servers/app_server/flask_app/vite/src/utils/: csrf.ts  types.ts
(+63 files in other folders)
