[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hhelibebcnofne", email = "flyingboat256@gmail.com" }
]
dependencies = [
    "flask-inertia>=0.9",
    "flask-vite>=0.5.1",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.0.1",
    "flask-mqtt>=1.2.1",
    "flask-wtf>=1.2.2",
    "flask-sslify>=0.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
